tests/integration/snapshots/integration__conformance__n_number_0e.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
[0e]
stderr ---
error: expected +/- or digit after exponent indicator, found `]`
 --> stdin:1:4
  |
1 | [0e]
  |  --^
  |  ||
  |  |exponent indicator found here
  |  number with exponent found here
